# tiny-url-web

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  output.css  tailwind.config.js
src/: main.rs  router.rs
src/pages/: create.rs  link_to.rs  links.rs  mod.rs
